<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zalehacks.apps.internmatch.RegisterFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp"
    >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_login_here"
        android:id="@+id/button_login_here"/>

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:layout_margin="36dp"
        />
    -->
    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/internlogo"
        android:padding="0dp"
    />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_student"
        android:orientation="horizontal"
        android:id="@+id/radio_group_type"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_type" />

        <RadioButton
            android:id="@id/radio_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_student" />

        <RadioButton
            android:id="@+id/radio_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_company" />


    </RadioGroup>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_other"
        android:orientation="horizontal"
        android:id="@+id/radio_group_gender"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_gender" />

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_male" />

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_female" />

        <RadioButton
            android:id="@id/radio_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_other" />

    </RadioGroup>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RadioGroup
            android:id="@+id/radio_group_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radio_freshman"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_level"
                android:layout_gravity="center_vertical"
                />

            <RadioButton
                android:id="@id/radio_freshman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_freshman" />

            <RadioButton
                android:id="@+id/radio_sophomore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_sophomore" />

            <RadioButton
                android:id="@+id/radio_junior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_junior" />

            <RadioButton
                android:id="@+id/radio_senior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_senior" />

        </RadioGroup>
    </HorizontalScrollView>

    <EditText
        android:id="@+id/edit_text_register_gpa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_gpa"
         />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        >

        <EditText
            android:id="@+id/edit_text_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_name"
            android:visibility="gone" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_register_fname"
                android:hint="@string/hint_enter_fname"
                android:layout_weight="0.5"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_register_lname"
                android:hint="@string/hint_enter_lname"
                android:layout_weight="0.5"
                />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_register_email"
            android:hint="@string/hint_enter_email"
            android:inputType="textEmailAddress"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_register_password"
            android:hint="@string/hint_enter_password"
            android:inputType="textPassword"
            />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:id="@+id/button_register"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:visibility="gone"
        android:id="@+id/progressbar_register"
        />
</LinearLayout>
