<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/menu_item_profile"
        android:title="@string/profile"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menu_item_matches"
        android:title="@string/matches"
        app:showAsAction="always"
        />
    <!--<item
        android:id="@+id/menu_item_requests"
        android:title="@string/requests"
        app:showAsAction="always"
        />-->
    <item
        android:id="@+id/menu_item_logout"
        android:title="@string/logout"
        app:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_lock_power_off"
        />
</menu>